# python-web-api

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.db.yml  docker-compose.yml  pyproject.toml
migrations/: README  env.py
migrations/versions/: 2022_12_23_2312-4b4a1ebb11e5_initial_migration.py
src/: .env  auth.py  heroes.py  main.py  settings.py
src/db/: db.py
src/db/models/: hero.py
